--- a/CM 1015 Computational Mathematics/_output.yml
+++ b/CM 1015 Computational Mathematics/_output.yml
@@ -22,6 +22,6 @@ bookdown::gitbook:
         family: sans
         size: 2
 bookdown::pdf_book:
-  latex_engine: xelatex
+  latex_engine: PdfLaTeX
   citation_package: natbib
   keep_tex: yes
