--- a/CM 1015 Computational Mathematics/_bookdown.yml
+++ b/CM 1015 Computational Mathematics/_bookdown.yml
@@ -6,6 +6,7 @@ language:
   ui:
     chapter_name: "Chapter "
 rmd_files: ["index.Rmd",
+"00-how-to-prove-it.Rmd",
             "01-number-bases.Rmd",
            "02-series-and-sequence.Rmd",
            "03-modular-arithmetic.Rmd"]
