we will have these up for now

--- a/CM 1015 Computational Mathematics/_bookdown.yml
+++ b/CM 1015 Computational Mathematics/_bookdown.yml
@@ -13,6 +13,7 @@ rmd_files: ["index.Rmd",
 "03-modular-arithmetic.Rmd",
 "04-trigonometry.Rmd",
 "05-functions.Rmd",
+"05-kinematics.Rmd",
 "06-trigo-functions.Rmd",
 "07-exponentials.Rmd",
 "08-diff.Rmd",
